ASTforRacket/src/ASTspecParser.java
// Generated from ASTspec.g4 by ANTLR 4.10.1
 import ast.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ASTspecParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGINN=1, BEGINN0=2, SETNQ=3, SET=4, DELAY=5, CAR=6, CDR=7, COMBINATIONS=8, 
		LIST=9, REVERSE=10, APPEND=11, LAMBDA=12, LAMBDASYM=13, LOCAL=14, LETREC=15, 
		SHARED=16, LET=17, LETSTAR=18, RECUR=19, COND=20, ELSE=21, IF=22, AND=23, 
		OR=24, TSCHECKEXP=25, TSCHECKRAND=26, TSCHECKWITHIN=27, TSCHECKMEMBEROF=28, 
		TSCHECKSATSIS=29, TSCHECKERROR=30, REQUIRE=31, DISPLAY=32, DEFINE=33, 
		NEWLINE=34, EMPTY=35, DEFINESTRUCT=36, QSMARK=37, QUOTESX=38, QUOTEQUOTED=39, 
		LEFTB=40, RIGHTB=41, LEFTSQB=42, RIGHTSQB=43, QUOTEQUASIQUOTED=44, CHARACTERQUOTED=45, 
		ARTHOPERATORS=46, BOOLEAN=47, RELOPERATORS=48, SYMBOL=49, INT=50, DECIMAL=51, 
		NAME=52, COMMA=53, COMMAAT=54, STRING=55, CHARACTER=56, LANG=57, COMMENT=58, 
		WS=59;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_defOrExpr = 2, RULE_nameplus = 3, 
		RULE_namestar = 4, RULE_definitionstar = 5, RULE_definition = 6, RULE_exprplus = 7, 
		RULE_lner = 8, RULE_leerbplus = 9, RULE_leersqbplus = 10, RULE_leersqbstar = 11, 
		RULE_expr = 12, RULE_pkg = 13, RULE_name = 14, RULE_symbol = 15, RULE_number = 16, 
		RULE_bool = 17, RULE_string = 18, RULE_character = 19, RULE_reloperators = 20, 
		RULE_arthoperators = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "defOrExpr", "nameplus", "namestar", "definitionstar", 
			"definition", "exprplus", "lner", "leerbplus", "leersqbplus", "leersqbstar", 
			"expr", "pkg", "name", "symbol", "number", "bool", "string", "character", 
			"reloperators", "arthoperators"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'begin0'", "'set!'", "'set'", "'delay'", "'car'", "'cdr'", 
			"'combinations'", "'list'", "'reverse'", "'append'", "'lambda'", "'\\u03BB'", 
			"'local'", "'letrec'", "'shared'", "'let'", "'let*'", "'recur'", "'cond'", 
			"'else '", "'if'", "'and'", "'or'", "'check-expect'", "'check-random'", 
			"'check-within'", "'check-member-of'", "'check-satisfied'", "'check-error'", 
			"'require'", "'display'", "'define'", "'newline'", "'empty'", "'define-struct'", 
			"'?'", "'\\u2019()'", "'\\u2019'", "'('", "')'", "'['", "']'", "'\\u2018'", 
			null, null, null, null, null, null, null, null, "','", "',@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGINN", "BEGINN0", "SETNQ", "SET", "DELAY", "CAR", "CDR", "COMBINATIONS", 
			"LIST", "REVERSE", "APPEND", "LAMBDA", "LAMBDASYM", "LOCAL", "LETREC", 
			"SHARED", "LET", "LETSTAR", "RECUR", "COND", "ELSE", "IF", "AND", "OR", 
			"TSCHECKEXP", "TSCHECKRAND", "TSCHECKWITHIN", "TSCHECKMEMBEROF", "TSCHECKSATSIS", 
			"TSCHECKERROR", "REQUIRE", "DISPLAY", "DEFINE", "NEWLINE", "EMPTY", "DEFINESTRUCT", 
			"QSMARK", "QUOTESX", "QUOTEQUOTED", "LEFTB", "RIGHTB", "LEFTSQB", "RIGHTSQB", 
			"QUOTEQUASIQUOTED", "CHARACTERQUOTED", "ARTHOPERATORS", "BOOLEAN", "RELOPERATORS", 
			"SYMBOL", "INT", "DECIMAL", "NAME", "COMMA", "COMMAAT", "STRING", "CHARACTER", 
			"LANG", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ASTspec.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ASTspecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext t1;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((StartContext)_localctx).t1 = program();
			((StartContext)_localctx).t1.node.print();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ASTNode node;
		public DefOrExprContext t1;
		public ProgramContext t2;
		public DefOrExprContext t3;
		public TerminalNode EOF() { return getToken(ASTspecParser.EOF, 0); }
		public DefOrExprContext defOrExpr() {
			return getRuleContext(DefOrExprContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				((ProgramContext)_localctx).t1 = defOrExpr();
				setState(48);
				((ProgramContext)_localctx).t2 = program();
				setState(49);
				match(EOF);
				((ProgramContext)_localctx).node =  new defOrExpr_program_eof_program(((ProgramContext)_localctx).t1.node,((ProgramContext)_localctx).t2.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				((ProgramContext)_localctx).t3 = defOrExpr();
				((ProgramContext)_localctx).node =  new defOrExpr_program(((ProgramContext)_localctx).t3.node);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefOrExprContext extends ParserRuleContext {
		public ASTNode node;
		public DefinitionContext t1;
		public ExprContext t2;
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DefOrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defOrExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterDefOrExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitDefOrExpr(this);
		}
	}

	public final DefOrExprContext defOrExpr() throws RecognitionException {
		DefOrExprContext _localctx = new DefOrExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defOrExpr);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				((DefOrExprContext)_localctx).t1 = definition();
				((DefOrExprContext)_localctx).node =  new definition_defOrExpr(((DefOrExprContext)_localctx).t1.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				((DefOrExprContext)_localctx).t2 = expr();
				((DefOrExprContext)_localctx).node =  new expr_defOrExpr(((DefOrExprContext)_localctx).t2.node);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameplusContext extends ParserRuleContext {
		public ASTNode node;
		public NameContext t1;
		public NameplusContext t2;
		public NameContext t3;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NameplusContext nameplus() {
			return getRuleContext(NameplusContext.class,0);
		}
		public NameplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterNameplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitNameplus(this);
		}
	}

	public final NameplusContext nameplus() throws RecognitionException {
		NameplusContext _localctx = new NameplusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nameplus);
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				((NameplusContext)_localctx).t1 = name();
				setState(66);
				((NameplusContext)_localctx).t2 = nameplus();
				((NameplusContext)_localctx).node =  new name_nameplus_nameplus(((NameplusContext)_localctx).t1.node,((NameplusContext)_localctx).t2.node);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				((NameplusContext)_localctx).t3 = name();
				_localctx.node = ((NameplusContext)_localctx).t3.node;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamestarContext extends ParserRuleContext {
		public ASTNode node;
		public NameContext t1;
		public NamestarContext t2;
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NamestarContext namestar() {
			return getRuleContext(NamestarContext.class,0);
		}
		public NamestarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namestar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterNamestar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitNamestar(this);
		}
	}

	public final NamestarContext namestar() throws RecognitionException {
		NamestarContext _localctx = new NamestarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namestar);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				((NamestarContext)_localctx).t1 = name();
				setState(75);
				((NamestarContext)_localctx).t2 = namestar();
				((NamestarContext)_localctx).node =  new name_namestar_namestar(((NamestarContext)_localctx).t1.node,((NamestarContext)_localctx).t2.node);
				}
				break;
			case RIGHTB:
				enterOuterAlt(_localctx, 2);
				{
				((NamestarContext)_localctx).node =  new epsilon_namestar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionstarContext extends ParserRuleContext {
		public ASTNode node;
		public DefinitionContext t1;
		public DefinitionstarContext t2;
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionstarContext definitionstar() {
			return getRuleContext(DefinitionstarContext.class,0);
		}
		public DefinitionstarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionstar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterDefinitionstar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitDefinitionstar(this);
		}
	}

	public final DefinitionstarContext definitionstar() throws RecognitionException {
		DefinitionstarContext _localctx = new DefinitionstarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definitionstar);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFTB:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				((DefinitionstarContext)_localctx).t1 = definition();
				setState(82);
				((DefinitionstarContext)_localctx).t2 = definitionstar();
				((DefinitionstarContext)_localctx).node =  new definition_definitionstar_definitionstar(((DefinitionstarContext)_localctx).t1.node,((DefinitionstarContext)_localctx).t2.node);
				}
				break;
			case RIGHTSQB:
				enterOuterAlt(_localctx, 2);
				{
				((DefinitionstarContext)_localctx).node =  new epsilon_definitionstar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public ASTNode node;
		public NameContext t1;
		public ExprContext t2;
		public NameContext t3;
		public NameplusContext t4;
		public ExprContext t5;
		public NameContext t6;
		public NamestarContext t7;
		public List<TerminalNode> LEFTB() { return getTokens(ASTspecParser.LEFTB); }
		public TerminalNode LEFTB(int i) {
			return getToken(ASTspecParser.LEFTB, i);
		}
		public TerminalNode DEFINE() { return getToken(ASTspecParser.DEFINE, 0); }
		public List<TerminalNode> RIGHTB() { return getTokens(ASTspecParser.RIGHTB); }
		public TerminalNode RIGHTB(int i) {
			return getToken(ASTspecParser.RIGHTB, i);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NameplusContext nameplus() {
			return getRuleContext(NameplusContext.class,0);
		}
		public TerminalNode DEFINESTRUCT() { return getToken(ASTspecParser.DEFINESTRUCT, 0); }
		public NamestarContext namestar() {
			return getRuleContext(NamestarContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definition);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(88);
				match(LEFTB);
				setState(89);
				match(DEFINE);
				setState(90);
				((DefinitionContext)_localctx).t1 = name();
				setState(91);
				((DefinitionContext)_localctx).t2 = expr();
				setState(92);
				match(RIGHTB);
				((DefinitionContext)_localctx).node =  new lb_def_name_expr_rb_definition(((DefinitionContext)_localctx).t1.node,((DefinitionContext)_localctx).t2.node);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(95);
				match(LEFTB);
				setState(96);
				match(DEFINE);
				setState(97);
				match(LEFTB);
				setState(98);
				((DefinitionContext)_localctx).t3 = name();
				setState(99);
				((DefinitionContext)_localctx).t4 = nameplus();
				setState(100);
				match(RIGHTB);
				setState(101);
				((DefinitionContext)_localctx).t5 = expr();
				setState(102);
				match(RIGHTB);
				((DefinitionContext)_localctx).node =  new lb_def_lb_name_nameplus_rb_expr_rb_definition(((DefinitionContext)_localctx).t3.node,((DefinitionContext)_localctx).t4.node,((DefinitionContext)_localctx).t5.node);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(105);
				match(LEFTB);
				setState(106);
				match(DEFINESTRUCT);
				setState(107);
				((DefinitionContext)_localctx).t6 = name();
				setState(108);
				match(LEFTB);
				setState(109);
				((DefinitionContext)_localctx).t7 = namestar();
				setState(110);
				match(RIGHTB);
				setState(111);
				match(RIGHTB);
				((DefinitionContext)_localctx).node =  new lb_defs_name_lb_namestar_rb_rb(((DefinitionContext)_localctx).t6.node,((DefinitionContext)_localctx).t7.node);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprplusContext extends ParserRuleContext {
		public ASTNode node;
		public ExprContext t1;
		public ExprplusContext t2;
		public ExprContext t3;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprplusContext exprplus() {
			return getRuleContext(ExprplusContext.class,0);
		}
		public ExprplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).enterExprplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ASTspecListener ) ((ASTspecListener)listener).exitExprplus(this);
		}
	}
